--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -1,3 +1,7 @@
 @import "./foundation.min.scss";
+@import "./colors";
+@import "./helpers";
+@import "./inputs.scss";
+@import "./buttons.scss";
 @import "./overrides.scss";
 @import "./HomePage.scss";
