--- a/src/scss/HomePage.scss
+++ b/src/scss/HomePage.scss
@@ -1,24 +1,6 @@
 @media screen and (max-width: 39.9375em) {
     .promo-intro {
-        background:     
-        linear-gradient(
-        #029b3598, 
-        rgba(2, 155, 53, 0.178), 
-        ),url("../images/background.jpg");
-        background-position: center;
-        background-repeat: no-repeat;
-        background-size: 100% 100%;
-        height: 48vh;
-    }
-
-    .promo-content {
-        margin: 10% auto 30%;
-        color: white;
-    }
-
-    .cta-button {
-        background-color: white;
-        color: #58A58A;
+        display: none;
     }
 
     .login-form {
@@ -27,11 +9,10 @@
     .login-sign-up-form {
         margin: 20% 0% 15% 0%;
     }
-
-    .logo {
-        width: 100%;
-        img{
-            width: 20%;
+    .login-sign-up-header {
+        h2 {
+            font-size: 24px !important;
+            font-weight: 500 !important;
         }
     }
 }
@@ -59,13 +40,12 @@
         background-color: white;
     }
     .login-sign-up-form {
-        margin: 9% 0% 15% 0%;
+        margin: 20% 0% 15% 0%;
     }
-
-    .logo {
-        width: 100%;
-        img{
-            width: 20%;
+    .login-sign-up-header {
+        h2 {
+            font-size: 24px !important;
+            font-weight: 500 !important;
         }
     }
 }
