--- a/src/scss/HomePage.scss
+++ b/src/scss/HomePage.scss
@@ -1,34 +1,18 @@
-@media screen and (max-width: 39.9375em) {
     .promo-intro {
-        display: none;
-    }
-
-    .login-form {
-        background-color: white;
-    }
-    .login-sign-up-form {
-        margin: 20% 0% 15% 0%;
-    }
-    .login-sign-up-header {
-        h2 {
-            font-size: 24px !important;
-            font-weight: 500 !important;
-        }
-    }
-}
-
-/* Medium and up */
-@media screen and (min-width: 40em) {
-    .promo-intro {
-        background:     
-        linear-gradient(
-        #029b3598, 
-        rgba(2, 155, 53, 0.178), 
-        ),url("../images/background.jpg");
+        background: linear-gradient(to right, #2D323E 0%, rgb(22, 25, 31) 100%);
         background-position: center;
         background-repeat: no-repeat;
         background-size: 100% 100%;
         height: 100vh;
+        color: white;
+    }
+
+    .promo {
+        padding: 5%;
+    }
+
+    .logo {
+        width: 20%;
     }
 
     .promo-content {
@@ -36,16 +20,7 @@
         color: white;
     }
 
-    .login-form {
-        background-color: white;
-    }
     .login-sign-up-form {
-        margin: 20% 0% 15% 0%;
+        background-color: white;
+        color: rgba(0, 0, 0, 0.87);
     }
-    .login-sign-up-header {
-        h2 {
-            font-size: 24px !important;
-            font-weight: 500 !important;
-        }
-    }
-}
