--- a/src/scss/HomePage.scss
+++ b/src/scss/HomePage.scss
@@ -1,3 +1,7 @@
+    .logo {
+        width: 10%;
+    }
+    
     .promo-intro {
         background: linear-gradient(to right, #2D323E 0%, rgb(22, 25, 31) 100%);
         background-position: center;
@@ -11,16 +15,13 @@
         padding: 5%;
     }
 
-    .logo {
-        width: 20%;
-    }
-
     .promo-content {
-        margin: 40% auto 30%;
         color: white;
     }
 
-    .login-sign-up-form {
+    .login-sign-up {
         background-color: white;
         color: rgba(0, 0, 0, 0.87);
+        height: 100vh;
     }
+    
