--- a/src/scss/_helpers.scss
+++ b/src/scss/_helpers.scss
@@ -1,6 +1,13 @@
 body {
-  font-family: roboto
+  font-family: roboto;
+  margin: 0;
+  font-weight: 300 !important;
 }
+
+h1 {
+  font-weight: 300 !important;
+}
+
 .text-right {
   text-align: right;
 }
@@ -1827,4 +1834,13 @@ body {
 
 img {
     width: 100%;
+}
+
+a{
+  color: $blue;
+  text-decoration: none;
+}
+
+a:hover {
+  text-decoration: underline
 }
