Added table into products page

--- a/src/scss/components/Navbar.scss
+++ b/src/scss/components/Navbar.scss
@@ -32,7 +32,7 @@ $nav-width: 280px;
 }
 
 .nav-item {
-    padding-bottom: 20px;
+    padding: 10px 0;
 }
 
 .nav-item-link{
@@ -43,7 +43,6 @@ $nav-width: 280px;
 
 .nav-item-text{
     color: white;
-    padding-top: 10px;
     padding-left: 20px;
 }
 
