--- a/src/scss/utils/_helpers.scss
+++ b/src/scss/utils/_helpers.scss
@@ -1856,3 +1856,13 @@ a:hover {
 .px-6{
   padding: 0 3.2rem;
 }
+
+.ReactTable {
+  flex: 1 1 100%;
+  display: flex;
+  box-shadow: 0px 1px 3px 0px rgba(0,0,0,0.2), 0px 1px 1px 0px rgba(0,0,0,0.14), 0px 2px 1px -1px rgba(0,0,0,0.12);
+  min-height: 0;
+  border-radius: 8px 8px 0 0;
+  flex-direction: column;
+  background-color: #fff;
+}
