Added function for table rows to get information

--- a/src/scss/pages/ProductsPage.scss
+++ b/src/scss/pages/ProductsPage.scss
@@ -58,6 +58,10 @@
     border-right: none;
 }
 
+.rt-tr-group:hover {
+    background: rgba(45, 50, 62, 0.089);
+    cursor: pointer;
+}
 
 .material-icons {
   font-family: 'Material Icons';
