--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -5,6 +5,6 @@
 // Pages
 @import "./pages/ProductsPage";
 @import "./pages/HomePage";
-
+@import "./pages/NewProduct.scss";
 // Components
 @import "./components/Navbar.scss"
