--- a/src/scss/utils/_table.scss
+++ b/src/scss/utils/_table.scss
@@ -15,3 +15,11 @@
 .MuiIconButton-root-154 {
   padding: 0 !important;
 }
+.remove-pop-up {
+    top: 17% !important;
+    left: 20% !important;
+}
+
+.checkbox-padding {
+    padding: 10px !important;
+}
