--- a/src/scss/pages/NewProduct.scss
+++ b/src/scss/pages/NewProduct.scss
@@ -22,7 +22,7 @@
 .product-info {
     background: white;
     border-top: 1px solid rgba(0,0,0,0.2);
-    border-bottom: 1px solid rgba(0,0,0,0.2)
+    border-bottom: 1px solid rgba(0,0,0,0.2);
 }
 
 .select {
