--- a/src/scss/pages/NewProduct.scss
+++ b/src/scss/pages/NewProduct.scss
@@ -34,3 +34,17 @@
     background-color: $blue !important;
     color: white !important;
 }
+
+// Image Uploader
+.upload-image-button {
+    background: $blue !important;
+}
+
+.deleteImage {
+    background: rgb(225, 0, 80) !important;
+    font-size: 16px !important;
+    font-weight: bold;
+    line-height: 27px !important;
+    width: 25px !important;
+    height: 25px !important;
+}
