created product detail page

--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -7,4 +7,5 @@
 @import "./pages/HomePage";
 @import "./pages/NewProduct.scss";
 // Components
-@import "./components/Navbar.scss"
+@import "./components/Navbar.scss";
+@import "./components/ProductImages.scss"
